force-app/main/default/objects/Forrester_Case_CRDR_Revenue__x/Forrester_Case_CRDR_Revenue__x.object-meta.xml
<CustomObject>
    <description>Forrester_Case_CRDR_Revenue</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_Case_CRDR_Revenue</externalName>
    <label>Income</label>
    <pluralLabel>Income</pluralLabel>
</CustomObject>