force-app/main/default/objects/Forrester_Case_CRDR_Revenue__x/fields/CASE_CRDR_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_CRDR_RECID__c</fullName>
    <description>CASE_CRDR_RECID</description>
    <externalDeveloperName>CASE_CRDR_RECID</externalDeveloperName>
    <label>CASE_CRDR_RECID</label>
    <length>24</length>
    <referenceTo>Forrester_SHIR_CRDR_VIEW__x</referenceTo>
    <relationshipLabel>Income</relationshipLabel>
    <relationshipName>Forrester_Case_CRDR_Revenues</relationshipName>
    <type>ExternalLookup</type>
</CustomField>