force-app/main/default/objects/Forrester_Case_CRDR_Revenue__x/fields/YTD_CASE_AGREEMENT_INCOME__c.field-meta.xml
<CustomField>
    <fullName>YTD_CASE_AGREEMENT_INCOME__c</fullName>
    <description>YTD_CASE_AGREEMENT_INCOME</description>
    <externalDeveloperName>YTD_CASE_AGREEMENT_INCOME</externalDeveloperName>
    <label>FY Case Agreement Income</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>